CodeJam/1A/pa1_partial.txt
testBST.o
BSTInt.o
BSTNodeInt.o
BST.exe

g++      -g -Wall -std=c++11 -c BSTInt.cpp
BSTInt.cpp: In function 'bool insert(int)':
BSTInt.cpp:25:8: error: 'root' was not declared in this scope
   if (!root) {
        ^
BSTInt.cpp:27:7: error: 'isize' was not declared in this scope
     ++isize;
       ^
BSTInt.cpp:31:22: error: 'root' was not declared in this scope
   BSTNodeInt* curr = root;
                      ^
BSTInt.cpp:56:5: error: 'isize' was not declared in this scope
   ++isize;
     ^
make: *** [BSTInt.o] Error 1

The bug is in the insert function that it will not check if the location to be inserted new node is null or not.

We spotted the bug by looking at the code. In BSTInt.cpp insert function. Current pointer only moves to its child only if left and right pointer are not null. Since the new node will be inserted as current node's child, but the funciton didn't check if the inserting child is null or not, it may overwrite the data if the child is not null.